# esp32-S3-idf-advanced-template-alpha-5.2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_RTOS.md  git_notes.md  git_notes.txt  partitions.csv  sdkconfig.defaults
.VSCodeCounter/2024-01-15_23-52-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
components/: NOTE.md  README.md
docs/: project_abstractions.md  project_blocks.md  project_flowcharts.md  project_sequences.md  project_state_models.md  project_states.md
main/: CMakeLists.txt  README.md  main.cpp  system_.cpp  system_diagnostic.cpp  system_diagnostics.cpp  system_gpio.cpp  system_gpio_.cpp  system_gpio_test.cpp  system_gpio_tests.cpp  system_logging.cpp  system_nvs.cpp  system_run.cpp  system_timer.cpp  system_utilities.cpp
main/docs/: system_abstraction.md  system_abstractions.md  system_blocks.md  system_flowcharts.md  system_operations.md  system_sequences.md  system_state_models.md
main/include/: system_.hpp  system_defs.hpp  system_enums.hpp
